# generalized_quadratic_embs

./: .gitignore  README.md  pyproject.toml  run_examples.sh
Examples/Burgers/: Burger_Dirichilet_data.ipynb  Burgers_plottings.ipynb  Example_Burgers_Dissipative-opinf.ipynb  Example_Burgers_Dissipative.ipynb
Examples/Lotka_Volterra/: Example_LV_Dissipative.py  lv_error_plots.ipynb
Examples/Pendulum/: pendulum_error_plots.ipynb
generalized_quad_embs/: constants.py  modules_quad_stable.py  plots_helper.py  utils.py
generalized_quad_embs/data_generation/: data_gen.py  data_gen_dissipative.py
