[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "generalized_quad_embs"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "h5py>=3.13.0",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.5.3",
    "numpy>=1.23",
    "pip",
    "python-dotenv",
    "ruff",
    "scipy==1.9",
    "torch==1.12",
    "uv>=0.6.14",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["generalized_quad_embs"]
include = ["pyproject.toml", "generalized_quad_embs/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["generalized_quad_embs"]
force-sort-within-sections = true

